regression/fail/modules.20.sml
functor F (type t) = struct fun f (x: t) = x = x end
